--- a/.eslintrc
+++ b/.eslintrc
@@ -53,7 +53,7 @@
         "no-caller": 2,
         "no-div-regex": 2,
         "no-else-return": 2,
-        "no-empty-label": 2,
+        //"no-empty-label": 2,
         "no-eq-null": 2,
         "no-eval": 2,
         "no-extend-native": 2,
@@ -96,7 +96,7 @@
         "no-label-var": 2,
         "no-shadow": 2,
         "no-shadow-restricted-names": 2,
-        "no-undef": 2,
+        "no-undef": 0,
         "no-undef-init": 2,
         "no-undefined": 2,
         //"no-unused-vars": 2,
@@ -142,13 +142,13 @@
         "quote-props": [2, "as-needed"],
         "semi": [2, "always"],
         "sort-vars": [2, {"ignoreCase": true}],
-        "space-after-keywords": 2,
+        //"space-after-keywords": 2,
         "space-before-blocks": 2,
         "object-curly-spacing": [2, "never"],
         "array-bracket-spacing": [2, "never"],
         "space-in-parens": 2,
         "space-infix-ops": 2,
-        "space-return-throw-case": 2,
+        //"space-return-throw-case": 2,
         "space-unary-ops": 2,
         "spaced-comment": 2,
         "wrap-regex": 0,
