remove class and add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,7 @@ Adobe\ After\ Effects\ Auto-Speichern
 # Particle Photon
 *.bin
 .idlk
-
+# Java compilation
+*.class
+# video and gif creation
 seq/
