--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "homepage": "https://github.com/fabianmoronzirfas/gestalten-in-code#readme",
   "dependencies": {
     "jquery": "^3.1.0"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^2.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
